publish: Fixed Submit an Entry case
generated from commit 074b396851f1173e284ef6e58c7b3b7a8171407d

--- a/index.html
+++ b/index.html
@@ -220,21 +220,21 @@
         <ul class="search-results"></ul>
       <div id="toc" class="toc-list-h1">
           <li>
-            <a href="#introduction" class="toc-h1 toc-link" data-title="introduction">Introduction</a>
+            <a href="#introduction" class="toc-h1 toc-link" data-title="Introduction">Introduction</a>
           </li>
           <li>
-            <a href="#authentication" class="toc-h1 toc-link" data-title="authentication">Authentication</a>
+            <a href="#authentication" class="toc-h1 toc-link" data-title="Authentication">Authentication</a>
           </li>
           <li>
-            <a href="#entries" class="toc-h1 toc-link" data-title="entries">Entries</a>
+            <a href="#entries" class="toc-h1 toc-link" data-title="Entries">Entries</a>
               <ul class="toc-list-h2">
                   <li>
-                    <a href="#submit-an-entry" class="toc-h2 toc-link" data-title="submit-an-entry">Submit an entry</a>
+                    <a href="#submit-an-entry" class="toc-h2 toc-link" data-title="Submit an Entry">Submit an Entry</a>
                   </li>
               </ul>
           </li>
           <li>
-            <a href="#errors" class="toc-h1 toc-link" data-title="errors">Errors</a>
+            <a href="#errors" class="toc-h1 toc-link" data-title="Errors">Errors</a>
           </li>
       </div>
         <ul class="toc-footer">
@@ -280,7 +280,7 @@ curl <span class="s2">"api_endpoint_here"</span>
 <aside class="notice">
 You must replace <code>YOUR-TOKEN-HERE</code> with your personal API token.
 </aside>
-<h1 id='entries'>Entries</h1><h2 id='submit-an-entry'>Submit an entry</h2><pre class="highlight shell tab-shell"><code>curl <span class="s2">"https://{base_url}/api/v1/promotions/{identifier}/entries"</span> <span class="se">\</span>
+<h1 id='entries'>Entries</h1><h2 id='submit-an-entry'>Submit an Entry</h2><pre class="highlight shell tab-shell"><code>curl <span class="s2">"https://{base_url}/api/v1/promotions/{identifier}/entries"</span> <span class="se">\</span>
   -H <span class="s2">"Authorization: Bearer YOUR-TOKEN-HERE"</span> <span class="se">\</span>
   -X POST <span class="se">\</span>
   -d <span class="s2">"email=jdoe@example.com&amp;first_name=John&amp;last_name=Doe"</span>
